Güncel site versiyonu eklendi 13 kasım 00.46

--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Error || Logistiq || Logistiq HTML 5 Template </title>
+    <title> Hata Sayfası || Alber Turizm || Alber Turizm ile Konforlu Yolculuk </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -21,6 +21,7 @@
 
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/bundle.all.min.css" />
+    <link rel="stylesheet" href="assets/css/menu-toggler.css" />
 </head>
 
 <body>
