--- a/Ogrenci-service.html
+++ b/Ogrenci-service.html
@@ -242,7 +242,8 @@
                     <div class="service-details__sidebar-contact text-center">
                         <div class="service-details__sidebar-contact-img">
                             <div class="inner">
-                                <img lazy="loading"  src="assets/images/resources/service-details-sidebar-img.png" alt="">
+                                                                <img lazy="loading"  src="assets/images/resources/Albw.webp" alt="">
+
                             </div>
                         </div>
 
@@ -258,49 +259,49 @@
             </div>
             <!--End Service Details Sidebar-->
 
-            <!--Start Service Details Content-->
-            <div class="col-xl-8">
-                <div class="service-details__content">
-                    <div class="service-details__content-img1">
-                        <div class="inner">
-                            <img lazy="loading"  src="assets/images/services/service-details-img5.jpg" alt="#">
-                        </div>
-                    </div>
-
-                    <div class="service-details__content-text1">
-                        <h2>Personel Taşımacılığı</h2>
-                        <p>Personel taşımacılığı hizmetimiz ile çalışanlarınızın güvenli ve konforlu bir şekilde işe ve işten taşınmasını sağlıyoruz. Zamanında ve güvenli taşıma ile iş süreçlerinizi destekliyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-text2">
-                        <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
-                        <p>Güvenlik, verimlilik ve uygun maliyet odaklı hizmet anlayışımızla her müşterimizin ihtiyacına özel çözümler sunuyoruz. Profesyonel ekibimiz ile yolculuk boyunca güven ve konfor sağlıyor, araç filomuzla kaliteli taşımacılık hizmeti sunuyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-img2">
-                        <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img2.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img3.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-
-                        <p>Hizmetlerimiz, hem bireysel hem de kurumsal ihtiyaçlara yönelik olarak geliştirilmiş olup, her yolculukta güven ve konforu garanti eder.</p>
-                    </div>
-
-                    <div class="service-details__content-img3">
-                        <img lazy="loading"  src="assets/images/services/service-details-img4.jpg" alt="">
+                    <!--Start Service Details Content-->
+        <div class="col-xl-8">
+            <div class="service-details__content">
+                <div class="service-details__content-img1">
+                    <div class="inner">
+                        <img lazy="loading" src="assets/images/resources/Ogrenci-tasimaciligi1 (1).webp" alt="#">
                     </div>
                 </div>
+
+                <div class="service-details__content-text1">
+                    <h2>Öğrenci Taşımacılığı</h2>
+                    <p>Alber Turizm olarak, öğrencilerimizin okula güvenli, konforlu ve zamanında ulaşmalarını sağlıyoruz. Modern araç filomuz ve deneyimli sürücülerimizle, velilerin ve okulların güven duyduğu profesyonel taşımacılık hizmeti sunuyoruz.</p>
+                </div>
+
+                <div class="service-details__content-text2">
+                    <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
+                    <p>Öğrencilerimizin güvenliği ve konforu bizim önceliğimizdir. Alber Turizm, eğitim kurumlarının ihtiyaçlarına uygun, planlı ve güvenilir taşımacılık çözümleri sunar. Araçlarımız düzenli olarak bakımdan geçirilir, sürücülerimiz çocuk taşımacılığı konusunda özel eğitimlidir. Her yolculukta huzur ve güveni garanti ederiz.</p>
+                </div>
+
+                <div class="service-details__content-img2">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Ogrenci-tasimaciligi2.webp" alt="">
+                            </div>
+                        </div>
+
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Ogrenci-tasimaciligi3.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>Okul servis taşımacılığında yılların deneyimine sahip olan Alber Turizm, öğrenci güvenliğini ve konforunu ön planda tutarak, ailelerin gönül rahatlığıyla tercih ettiği bir markadır.</p>
+                </div>
+
+                <div class="service-details__content-img3">
+                    <img lazy="loading" src="assets/images/resources/Ogrenci-tasimaciligi4.webp" alt="">
+                </div>
             </div>
-            <!--End Service Details Content-->
+        </div>
+        <!--End Service Details Content-->
         </div>
         </div>
         <a href="https://wa.me/905426194939" class="float-btn-whatsapp" target="_blank" aria-label="WhatsApp">
