--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
                         <div class="about-one__img">
                             <div class="shape2 float-bob-y"><img lazy="loading"  src="assets/images/shapes/about-v1-shape2.png" alt=""></div>
                             <div class="about-one__img1 reveal">
-                                <img lazy="loading"  src="assets/images/resources/envato-labs-ai-1ba79a32-4d77-4c1d-b10e-9201a6853d32.webp" alt="Alber Turizm Ekibi">
+                                <img lazy="loading"  src="assets/images/resources/alberTurizm-1.webp" alt="Alber Turizm Ekibi">
                             </div>
 
                             <div class="about-one__img2">
                                 <div class="about-one__img2-inner reveal">
-                                    <img lazy="loading"  src="assets/images/resources/portier-welcoming-into-the-car-2025-02-02-16-23-18-utc.webp" alt="Alber Turizm Araç Filosu">
+                                    <img lazy="loading"  src="assets/images/resources/AlberTurizm2.webp" alt="Alber Turizm Araç Filosu">
                                 </div>
 
                                 <div class="about-one__circle-text">
@@ -433,138 +433,138 @@
 
 
        <section class="services-section">
-  <!-- Kayan Yazı Başlığı -->
-  <div class="sliding-text-one">
-    <div class="sliding-text-one__wrap">
-      <ul class="sliding-text__list list-unstyled marquee_mode">
-        <li>
-          <h2 data-hover="HİZMETLERİMİZ – ALBER TURİZM" class="sliding-text__title">
-            HİZMETLERİMİZ – ALBER TURİZM
-            <img lazy="loading"  src="assets/images/icon/sliding-text-icon-1.png" alt="ikon">
-          </h2>
-        </li>
-        <li>
-          <h2 data-hover="YAPTIĞIMIZ İŞLER" class="sliding-text__title">
-            YAPTIĞIMIZ İŞLER
-            <img lazy="loading"  src="assets/images/icon/sliding-text-icon-1.png" alt="ikon">
-          </h2>
-        </li>
-      </ul>
-    </div>
-  </div>
-
- <section class="services-section">
-  <div class="container">
-
-    <div class="title">
-        <h2>Hizmetlerimiz <span class="fas fa-bus-alt" style="font-size: 20px; color: #ff7e5f;"></span></h2>
-    </div>
-
-    <div class="container my-5">
-  <div class="row g-4">
-
-  <!-- Personel Taşımacılığı -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/Personel-tasimaciligi.webp" alt="Personel Taşımacılığı" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">Personel Taşımacılığı</h3>
-        <p>Kurumsal firmalar için güvenli, düzenli ve dakik personel taşımacılığı hizmeti sunuyoruz.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="service.html">Detaylı Bilgi</a>
+        <!-- Kayan Yazı Başlığı -->
+        <div class="sliding-text-one">
+            <div class="sliding-text-one__wrap">
+            <ul class="sliding-text__list list-unstyled marquee_mode">
+                <li>
+                <h2 data-hover="HİZMETLERİMİZ – ALBER TURİZM" class="sliding-text__title">
+                    HİZMETLERİMİZ – ALBER TURİZM
+                    <img lazy="loading"  src="assets/images/icon/sliding-text-icon-1.png" alt="ikon">
+                </h2>
+                </li>
+                <li>
+                <h2 data-hover="YAPTIĞIMIZ İŞLER" class="sliding-text__title">
+                    YAPTIĞIMIZ İŞLER
+                    <img lazy="loading"  src="assets/images/icon/sliding-text-icon-1.png" alt="ikon">
+                </h2>
+                </li>
+            </ul>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Öğrenci Taşımacılığı -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/okul-tasimaciligi.webp" alt="Öğrenci Taşımacılığı" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">Öğrenci Taşımacılığı</h3>
-        <p>Çocuklarımızın güvenliği önceliğimizdir. Deneyimli sürücüler ve araç takip sistemiyle güvenli ulaşım.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="Ogrenci-service.html">Detaylı Bilgi</a>
+        <section class="services-section">
+        <div class="container">
+
+            <div class="title">
+                <h2>Hizmetlerimiz <span class="fas fa-bus-alt" style="font-size: 20px; color: #ff7e5f;"></span></h2>
+            </div>
+
+            <div class="container my-5">
+        <div class="row g-4">
+
+        <!-- Personel Taşımacılığı -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/Persone-tasimaciligi2.webp" alt="Personel Taşımacılığı" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">Personel Taşımacılığı</h3>
+                <p>Kurumsal firmalar için güvenli, düzenli ve dakik personel taşımacılığı hizmeti sunuyoruz.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Filo Kiralama -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/APR04716-scaled.webp" alt="Filo Kiralama" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">Filo Kiralama</h3>
-        <p>Yakıt, bakım ve sigorta dahil profesyonel filo yönetimiyle zaman kazanın.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="filo-service.html">Detaylı Bilgi</a>
+        <!-- Öğrenci Taşımacılığı -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/Ogrenci-tasimaciligi1 (1).webp" alt="Öğrenci Taşımacılığı" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">Öğrenci Taşımacılığı</h3>
+                <p>Çocuklarımızın güvenliği önceliğimizdir. Deneyimli sürücüler ve araç takip sistemiyle güvenli ulaşım.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="Ogrenci-service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Araç Filomuz -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/interior-of-a-regular-intercity-bus-2024-10-21-11-26-34-utc.webp" alt="Araç Filomuz" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">Araç Filomuz</h3>
-        <p>Modern, bakımlı ve konforlu araç filomuzla tüm ulaşım ihtiyaçlarınıza çözüm sunuyoruz.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="arac-service.html">Detaylı Bilgi</a>
+        <!-- Filo Kiralama -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/Arac-filomuz2.webp" alt="Filo Kiralama" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">Filo Kiralama</h3>
+                <p>Yakıt, bakım ve sigorta dahil profesyonel filo yönetimiyle zaman kazanın.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="filo-service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- VIP Transfer Hizmeti -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/envato-labs-ai-1ba79a32-4d77-4c1d-b10e-9201a6853d32.webp" alt="VIP Transfer" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">VIP Transfer Hizmeti</h3>
-        <p>Konforlu, özel ve güvenli ulaşım deneyimi için VIP transfer hizmetlerimizden yararlanın.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="vip-service.html">Detaylı Bilgi</a>
+        <!-- Araç Filomuz -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/Filo-kiralama4.webp" alt="Araç Filomuz" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">Araç Filomuz</h3>
+                <p>Modern, bakımlı ve konforlu araç filomuzla tüm ulaşım ihtiyaçlarınıza çözüm sunuyoruz.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="arac-service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Havalimanı Servisi -->
-  <div class="col-lg-4 col-md-6 col-sm-12">
-    <div class="service-box text-center shadow-sm p-3 h-100 rounded">
-      <div class="service-img mb-3">
-        <img lazy="loading"  src="assets/images/resources/portier-welcoming-into-the-car-2025-02-02-16-23-18-utc.webp" alt="Havalimanı Servisi" class="img-fluid rounded">
-      </div>
-      <div class="service-content">
-        <h3 class="h4 fw-bold mb-2">Havalimanı Servisi</h3>
-        <p>Havalimanı transferlerinizi zamanında ve konforlu bir şekilde gerçekleştiriyoruz.</p>
-        <div class="btn-box">
-          <a class="thm-btn" href="vip-service.html">Detaylı Bilgi</a>
+        <!-- VIP Transfer Hizmeti -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/Filo-kiralama3.webp" alt="VIP Transfer" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">VIP Transfer Hizmeti</h3>
+                <p>Konforlu, özel ve güvenli ulaşım deneyimi için VIP transfer hizmetlerimizden yararlanın.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="vip-service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-</div>
+        <!-- Havalimanı Servisi -->
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="service-box text-center shadow-sm p-3 h-100 rounded">
+            <div class="service-img mb-3">
+                <img lazy="loading"  src="assets/images/resources/portier-welcoming-into-the-car-2025-02-02-16-23-18-utc.webp" alt="Havalimanı Servisi" class="img-fluid rounded">
+            </div>
+            <div class="service-content">
+                <h3 class="h4 fw-bold mb-2">Havalimanı Servisi</h3>
+                <p>Havalimanı transferlerinizi zamanında ve konforlu bir şekilde gerçekleştiriyoruz.</p>
+                <div class="btn-box">
+                <a class="thm-btn" href="vip-service.html">Detaylı Bilgi</a>
+                </div>
+            </div>
+            </div>
+        </div>
 
-</div>
+        </div>
 
-  </div>
-</section>
+        </div>
+
+        </div>
+        </section>
 
         </section>
 
@@ -728,11 +728,11 @@
                             <div class="shape1 float-bob-y"><img lazy="loading"  src="assets/images/shapes/skill-v1-shape1.png" alt=""></div>
                             <div class="shape2 float-bob-y"><img lazy="loading"  src="assets/images/shapes/skill-v1-shape2.png" alt=""></div>
                             <div class="skill-one__img1 wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                                <img lazy="loading"  src="assets/images/resources/APR04716-scaled.webp"  alt="Alber Turizm Araç Filosu">
+                                <img lazy="loading"  src="assets/images/resources/Ogrenci-tasimaciligi2 (1).webp"  alt="Alber Turizm Araç Filosu">
                             </div>
                             <div class="skill-one__img2 wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
                                 <div class="inner">
-                                    <img lazy="loading"  src="assets/images/resources/interior-of-a-regular-intercity-bus-2024-10-21-11-26-34-utc.webp" alt="Mutlu Müşteri Alber Turizm">
+                                    <img lazy="loading"  src="assets/images/resources/Ogrenci-tasimaciligi1 (1).webp" alt="Mutlu Müşteri Alber Turizm">
                                 </div>
                             </div>
                         </div>
