--- a/service.html
+++ b/service.html
@@ -241,7 +241,8 @@
                     <div class="service-details__sidebar-contact text-center">
                         <div class="service-details__sidebar-contact-img">
                             <div class="inner">
-                                <img lazy="loading"  src="assets/images/resources/service-details-sidebar-img.png" alt="">
+                                                                <img lazy="loading"  src="assets/images/resources/Albw.webp" alt="">
+
                             </div>
                         </div>
 
@@ -262,12 +263,12 @@
                 <div class="service-details__content">
                     <div class="service-details__content-img1">
                         <div class="inner">
-                            <img lazy="loading"  src="assets/images/services/service-details-img5.jpg" alt="#">
+                            <img lazy="loading"  src="assets/images/resources/Persone-Tasimaciligi1 (1).webp" alt="#">
                         </div>
                     </div>
 
                     <div class="service-details__content-text1">
-                        <h2>Personel Taşımacılığı</h2>
+                        <h2 >Personel Taşımacılığı</h2>
                         <p>Personel taşımacılığı hizmetimiz ile çalışanlarınızın güvenli ve konforlu bir şekilde işe ve işten taşınmasını sağlıyoruz. Zamanında ve güvenli taşıma ile iş süreçlerinizi destekliyoruz.</p>
                     </div>
 
@@ -280,13 +281,13 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img2.jpg" alt="">
+                                    <img lazy="loading"  src="assets/images/resources/Persone-Tasimaciligi2.webp" alt="">
                                 </div>
                             </div>
 
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img3.jpg" alt="">
+                                    <img lazy="loading"  src="assets/images/resources/Persone-Tasimaciligi3.webp" alt="">
                                 </div>
                             </div>
                         </div>
@@ -295,7 +296,7 @@
                     </div>
 
                     <div class="service-details__content-img3">
-                        <img lazy="loading"  src="assets/images/services/service-details-img4.jpg" alt="">
+                        <img lazy="loading"  src="assets/images/resources/Personel-tasimaciligi4.webp" alt="">
                     </div>
 
                     
