--- a/vip-service.html
+++ b/vip-service.html
@@ -238,7 +238,7 @@
                     <div class="service-details__sidebar-contact text-center">
                         <div class="service-details__sidebar-contact-img">
                             <div class="inner">
-                                <img lazy="loading"  src="assets/images/resources/service-details-sidebar-img.png" alt="">
+                                <img lazy="loading"  src="assets/images/resources/Albw.webp" alt="">
                             </div>
                         </div>
 
@@ -259,44 +259,45 @@
                 <div class="service-details__content">
                     <div class="service-details__content-img1">
                         <div class="inner">
-                            <img lazy="loading"  src="assets/images/services/service-details-img5.jpg" alt="#">
+                            <img lazy="loading" src="assets/images/resources/Filo-kiralama1 (1).webp" alt="#">
                         </div>
                     </div>
 
                     <div class="service-details__content-text1">
-                        <h2>Personel Taşımacılığı</h2>
-                        <p>Personel taşımacılığı hizmetimiz ile çalışanlarınızın güvenli ve konforlu bir şekilde işe ve işten taşınmasını sağlıyoruz. Zamanında ve güvenli taşıma ile iş süreçlerinizi destekliyoruz.</p>
+                        <h2>VIP Transfer Hizmeti</h2>
+                        <p>Alber Turizm, VIP transfer hizmetiyle konfor, güven ve prestiji bir arada sunar. Misafirlerinizin veya sizin, havaalanı transferlerinden özel organizasyonlara kadar her türlü ulaşım ihtiyacını lüks ve konforlu araçlarımızla karşılıyoruz. Deneyimli şoförlerimizle her yolculuğu keyifli, güvenli ve özel hale getiriyoruz.</p>
                     </div>
 
                     <div class="service-details__content-text2">
-                        <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
-                        <p>Güvenlik, verimlilik ve uygun maliyet odaklı hizmet anlayışımızla her müşterimizin ihtiyacına özel çözümler sunuyoruz. Profesyonel ekibimiz ile yolculuk boyunca güven ve konfor sağlıyor, araç filomuzla kaliteli taşımacılık hizmeti sunuyoruz.</p>
+                        <h2>Neden Alber Turizm VIP Transfer?</h2>
+                        <p>Alber Turizm, VIP transfer hizmetinde üst düzey konfor, gizlilik ve güvenlik standartlarını bir araya getirir. Modern ve lüks araçlarımız, özel eğitimli sürücülerimiz ve zamanında hizmet anlayışımızla sizlere ayrıcalıklı bir yolculuk deneyimi yaşatırız. İster iş seyahati ister özel bir davet olsun, Alber Turizm her detayı sizin için düşünür.</p>
                     </div>
 
                     <div class="service-details__content-img2">
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img2.jpg" alt="">
+                                    <img lazy="loading" src="assets/images/resources/Filo-kiralama2.webp" alt="">
                                 </div>
                             </div>
 
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img3.jpg" alt="">
+                                    <img lazy="loading" src="assets/images/resources/Filo-kiralama3.webp" alt="">
                                 </div>
                             </div>
                         </div>
 
-                        <p>Hizmetlerimiz, hem bireysel hem de kurumsal ihtiyaçlara yönelik olarak geliştirilmiş olup, her yolculukta güven ve konforu garanti eder.</p>
+                        <p>VIP transfer hizmetimiz; havaalanı karşılama, otel transferi, şehir içi ulaşım ve özel etkinlik taşımacılığı gibi farklı alanlarda hizmet vermektedir. Alber Turizm olarak, her müşterimize kişiye özel çözümler sunuyor, konforlu ve prestijli bir ulaşım deneyimi sağlıyoruz.</p>
                     </div>
 
                     <div class="service-details__content-img3">
-                        <img lazy="loading"  src="assets/images/services/service-details-img4.jpg" alt="">
+                        <img lazy="loading" src="assets/images/resources/Filo-kiralama4.webp" alt="">
                     </div>
                 </div>
             </div>
             <!--End Service Details Content-->
+
         </div>
         </div>
         </section>
