--- a/arac-service.html
+++ b/arac-service.html
@@ -232,7 +232,8 @@
                     <div class="service-details__sidebar-contact text-center">
                         <div class="service-details__sidebar-contact-img">
                             <div class="inner">
-                                <img lazy="loading"  src="assets/images/resources/service-details-sidebar-img.png" alt="">
+                                                                <img lazy="loading"  src="assets/images/resources/Albw.webp" alt="">
+
                             </div>
                         </div>
 
@@ -249,48 +250,50 @@
             <!--End Service Details Sidebar-->
 
             <!--Start Service Details Content-->
-            <div class="col-xl-8">
-                <div class="service-details__content">
-                    <div class="service-details__content-img1">
-                        <div class="inner">
-                            <img lazy="loading"  src="assets/images/services/service-details-img5.jpg" alt="#">
-                        </div>
-                    </div>
-
-                    <div class="service-details__content-text1">
-                        <h2>Personel Taşımacılığı</h2>
-                        <p>Personel taşımacılığı hizmetimiz ile çalışanlarınızın güvenli ve konforlu bir şekilde işe ve işten taşınmasını sağlıyoruz. Zamanında ve güvenli taşıma ile iş süreçlerinizi destekliyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-text2">
-                        <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
-                        <p>Güvenlik, verimlilik ve uygun maliyet odaklı hizmet anlayışımızla her müşterimizin ihtiyacına özel çözümler sunuyoruz. Profesyonel ekibimiz ile yolculuk boyunca güven ve konfor sağlıyor, araç filomuzla kaliteli taşımacılık hizmeti sunuyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-img2">
-                        <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img2.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img3.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-
-                        <p>Hizmetlerimiz, hem bireysel hem de kurumsal ihtiyaçlara yönelik olarak geliştirilmiş olup, her yolculukta güven ve konforu garanti eder.</p>
-                    </div>
-
-                    <div class="service-details__content-img3">
-                        <img lazy="loading"  src="assets/images/services/service-details-img4.jpg" alt="">
+        <div class="col-xl-8">
+            <div class="service-details__content">
+                <div class="service-details__content-img1">
+                    <div class="inner">
+                        <img lazy="loading" src="assets/images/resources/Arac-filomuz1 (1).webp" alt="#">
                     </div>
                 </div>
+
+                <div class="service-details__content-text1">
+                    <h2>Araç Filomuz
+                    </h2>
+                    <p>Alber Turizm, geniş ve modern araç filosuyla her türlü ulaşım ihtiyacınıza profesyonel çözümler sunar. Konforlu, güvenli ve düzenli bakımları yapılan araçlarımız, hem bireysel hem kurumsal müşterilerimize en yüksek kalite standartlarında hizmet verir.</p>
+                </div>
+
+                <div class="service-details__content-text2">
+                    <h2>Neden Alber Turizm Araç Filosunu Tercih Etmelisiniz?</h2>
+                    <p>Her biri yeni model, konforlu ve güvenlik donanımları tam araçlarımızla, yolculuklarınızda fark yaratıyoruz. Alber Turizm olarak, müşteri memnuniyetini ve güvenliği ön planda tutuyor, her ihtiyaca uygun araç alternatifleri sunuyoruz. Minibüs, midibüs, otobüs ve VIP araçlarımız ile konforlu ve güvenilir taşımacılık sağlıyoruz.</p>
+                </div>
+
+                <div class="service-details__content-img2">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Arac-filomuz2.webp" alt="">
+                            </div>
+                        </div>
+
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Arac-filomuz3.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>Alber Turizm araç filosu, farklı kapasite ve donanım seçenekleriyle her sektörden müşteriye hizmet verir. Tüm araçlarımız periyodik bakımları yapılmış, sigortalı ve her zaman yola hazırdır. Güvenliğiniz ve konforunuz için en uygun çözümü sunuyoruz.</p>
+                </div>
+
+                <div class="service-details__content-img3">
+                    <img lazy="loading" src="assets/images/resources/Filo-kiralama4.webp" alt="">
+                </div>
             </div>
-            <!--End Service Details Content-->
+        </div>
+        <!--End Service Details Content-->
+
         </div>
         </div>
         
