--- a/filo-service.html
+++ b/filo-service.html
@@ -232,7 +232,8 @@
                     <div class="service-details__sidebar-contact text-center">
                         <div class="service-details__sidebar-contact-img">
                             <div class="inner">
-                                <img lazy="loading"  src="assets/images/resources/service-details-sidebar-img.png" alt="">
+                                                                <img lazy="loading"  src="assets/images/resources/Albw.webp" alt="">
+
                             </div>
                         </div>
 
@@ -248,49 +249,51 @@
             </div>
             <!--End Service Details Sidebar-->
 
-            <!--Start Service Details Content-->
-            <div class="col-xl-8">
-                <div class="service-details__content">
-                    <div class="service-details__content-img1">
-                        <div class="inner">
-                            <img lazy="loading"  src="assets/images/services/service-details-img5.jpg" alt="#">
-                        </div>
-                    </div>
-
-                    <div class="service-details__content-text1">
-                        <h2>Personel Taşımacılığı</h2>
-                        <p>Personel taşımacılığı hizmetimiz ile çalışanlarınızın güvenli ve konforlu bir şekilde işe ve işten taşınmasını sağlıyoruz. Zamanında ve güvenli taşıma ile iş süreçlerinizi destekliyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-text2">
-                        <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
-                        <p>Güvenlik, verimlilik ve uygun maliyet odaklı hizmet anlayışımızla her müşterimizin ihtiyacına özel çözümler sunuyoruz. Profesyonel ekibimiz ile yolculuk boyunca güven ve konfor sağlıyor, araç filomuzla kaliteli taşımacılık hizmeti sunuyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-img2">
-                        <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img2.jpg" alt="">
-                                </div>
-                            </div>
-
-                            <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-img">
-                                    <img lazy="loading"  src="assets/images/services/service-details-img3.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-
-                        <p>Hizmetlerimiz, hem bireysel hem de kurumsal ihtiyaçlara yönelik olarak geliştirilmiş olup, her yolculukta güven ve konforu garanti eder.</p>
-                    </div>
-
-                    <div class="service-details__content-img3">
-                        <img lazy="loading"  src="assets/images/services/service-details-img4.jpg" alt="">
+        <!--Start Service Details Content-->
+        <div class="col-xl-8">
+            <div class="service-details__content">
+                <div class="service-details__content-img1">
+                    <div class="inner">
+                        <img lazy="loading" src="assets/images/resources/Filo-kiralama1 (1).webp" alt="#">
                     </div>
                 </div>
+
+                <div class="service-details__content-text1">
+                    <h2>Filo Kiralama</h2>
+                    <p>Alber Turizm, işletmelerin ulaşım ihtiyaçlarını profesyonel filo kiralama çözümleriyle karşılar. Modern, güvenli ve ekonomik araç filomuzla, kurumların operasyonel yükünü azaltarak verimliliği artırıyoruz. İster kısa dönem ister uzun dönem kiralama olsun, her ihtiyaca uygun esnek çözümler sunuyoruz.</p>
+                </div>
+
+                <div class="service-details__content-text2">
+                    <h2>Bu Hizmeti Neden Tercih Etmelisiniz?</h2>
+                    <p>Alber Turizm Filo Kiralama hizmetiyle bakım, sigorta ve vergi gibi maliyetlerden kurtulurken; yeni, konforlu ve bakımlı araçlarla iş sürekliliğinizi sağlarsınız. Kurumsal müşterilerimize özel fiyat avantajları, hızlı teslimat ve profesyonel destek sunarak işinizi kolaylaştırıyoruz. Tüm araçlarımız düzenli olarak kontrol edilmekte ve yüksek güvenlik standartlarına uygun şekilde hizmet vermektedir.</p>
+                </div>
+
+                <div class="service-details__content-img2">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Filo-kiralama2.webp" alt="">
+                            </div>
+                        </div>
+
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-img">
+                                <img lazy="loading" src="assets/images/resources/Filo-kiralama3.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>Alber Turizm olarak, filo kiralama hizmetlerimizde müşteri memnuniyetini ön planda tutuyor; firmaların ihtiyaçlarına uygun araç ve hizmet seçenekleriyle uzun soluklu iş ortaklıkları kuruyoruz.</p>
+                </div>
+
+                <div class="service-details__content-img3">
+                    <img lazy="loading" src="assets/images/resources/Filo-kiralama4.webp" alt="">
+                </div>
             </div>
-            <!--End Service Details Content-->
+        </div>
+        <!--End Service Details Content-->
+
+
         </div>
         </div>
         <a href="https://wa.me/905426194939" class="float-btn-whatsapp" target="_blank" aria-label="WhatsApp">
