Güncel site versiyonu eklendi 13 kasım 12.59

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="service-box text-center shadow-sm p-3 h-100 rounded">
             <div class="service-img mb-3">
-                <img lazy="loading"  src="assets/images/resources/Persone-tasimaciligi2.webp" alt="Personel Taşımacılığı" class="img-fluid rounded">
+                <img lazy="loading"  src="assets/images/resources/Persone-Tasimaciligi1 (1).webp" alt="Personel Taşımacılığı" class="img-fluid rounded">
             </div>
             <div class="service-content">
                 <h3 class="h4 fw-bold mb-2">Personel Taşımacılığı</h3>
