Güncel site versiyonu eklendi 13 kasım son attığım video eklendi

--- a/is-Ortaklarimiz.html
+++ b/is-Ortaklarimiz.html
@@ -216,51 +216,65 @@
         </div><!-- /.stricky-header -->
 
 
-        <section class="partners">
+       <section class="partners py-5 bg-light">
   <div class="container">
-    <div class="partners__title text-center">
+    <div class="text-center mb-5">
       <h2>İş Ortaklarımız</h2>
       <p>Güven, kalite ve iş birliğiyle sürdürülebilir başarıya birlikte ulaşıyoruz.</p>
     </div>
 
-    <div class="partners__grid">
+    <div class="row justify-content-center g-5">
 
       <!-- Partner 1 -->
-      <div class="partner-card">
-        <div class="partner-logo">
-          <img src="assets/images/resources/atasay.webp" alt="Atasay" loading="lazy">
-        </div>
-        <div class="partner-info">
+      <div class="col-12 col-md-6 col-lg-4 text-center">
+        <div class="partner-card p-4">
+          <img src="assets/images/resources/Atasay.webp" alt="Atasay" class="img-fluid partner-logo mb-3">
           <h4>Atasay</h4>
-          <p>Kurumsal personel taşımacılığı alanında uzun yıllardır güvenilir çözüm ortağımız.</p>
+          <p>Kurumsal personel taşımacılığı alanında güvenilir çözüm ortağımız.</p>
         </div>
       </div>
 
       <!-- Partner 2 -->
-      <div class="partner-card">
-        <div class="partner-logo">
-          <img src="assets/images/resources/Yeni Proje (5).webp" alt="Medicana" loading="lazy">
-        </div>
-        <div class="partner-info">
+      <div class="col-12 col-md-6 col-lg-4 text-center">
+        <div class="partner-card p-4">
+          <img src="assets/images/resources/Medicana.webp" alt="Medicana" class="img-fluid partner-logo mb-3">
           <h4>Medicana Hastaneler Grubu</h4>
-          <p>Sağlık personeli ve hasta taşıma operasyonlarında profesyonel taşımacılık desteği sağladığımız değerli partnerimiz.</p>
+          <p>Sağlık personeli ve hasta taşımacılığında profesyonel destek sağlıyoruz.</p>
         </div>
       </div>
 
       <!-- Partner 3 -->
-      <div class="partner-card">
-        <div class="partner-logo">
-          <img src="assets/images/resources/edenered.webp" alt="Edenred" loading="lazy">
-        </div>
-        <div class="partner-info">
+      <div class="col-12 col-md-6 col-lg-4 text-center">
+        <div class="partner-card p-4">
+          <img src="assets/images/resources/enderned.webp" alt="Edenred" class="img-fluid partner-logo mb-3">
           <h4>Edenred</h4>
-          <p>Akaryakıt, filo ve operasyonel yönetim süreçlerinde dijital çözümleriyle destek aldığımız önemli iş ortağımız.</p>
+          <p>Akaryakıt ve operasyon yönetiminde dijital çözümleriyle destek sağlıyor.</p>
+        </div>
+      </div>
+
+      <!-- Partner 4 -->
+      <div class="col-12 col-md-6 col-lg-4 text-center">
+        <div class="partner-card p-4">
+          <img src="assets/images/resources/Kervan.webp" alt="Kervan" class="img-fluid partner-logo mb-3">
+          <h4>Kervan</h4>
+          <p>Kervan Gıda’nın personel taşımacılığında güvenilir ve konforlu hizmet sağlıyoruz.</p>
+        </div>
+      </div>
+
+      <!-- Partner 5 -->
+      <div class="col-12 col-md-6 col-lg-4 text-center">
+        <div class="partner-card p-4">
+          <img src="assets/images/resources/mba-logo.webp" alt="MBA" class="img-fluid partner-logo mb-3">
+          <h4>MBA</h4>
+          <p>MBA Okulu öğrencilerinin güvenli ve konforlu taşımacılığını sağlıyoruz.</p>
         </div>
       </div>
 
     </div>
   </div>
-    </section>
+</section>
+
+
 
 
 
