--- a/service.html
+++ b/service.html
@@ -251,7 +251,7 @@
                                 <span class="icon-phone"></span>
                             </div>
                             <h2><a href="tel:+905426194939">+90 542 619 49 39</a></h2>
-                            <h3>Herhangi Bir Yardıma İhtiyacınız Olursa <br> Bizimle İletişime Geçin</h3>
+                            <h3>Herhangi bir acil durumda<br> Bizimle İletişime Geçin</h3>
                         </div>
                     </div>
                 </div>
