--- a/vip-service.html
+++ b/vip-service.html
@@ -259,7 +259,7 @@
                 <div class="service-details__content">
                     <div class="service-details__content-img1">
                         <div class="inner">
-                            <img lazy="loading" src="assets/images/resources/Filo-kiralama1 (1).webp" alt="#">
+                            <img lazy="loading" src="assets/images/resources/VipTransfer1.webp" alt="#">
                         </div>
                     </div>
 
@@ -277,22 +277,18 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading" src="assets/images/resources/Filo-kiralama2.webp" alt="">
+                                    <img lazy="loading" src="assets/images/resources/viptransfer.webp" alt="">
                                 </div>
                             </div>
 
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-img">
-                                    <img lazy="loading" src="assets/images/resources/Filo-kiralama3.webp" alt="">
+                                    <img lazy="loading" src="assets/images/resources/havalimanı.webp" alt="">
                                 </div>
                             </div>
                         </div>
 
                         <p>VIP transfer hizmetimiz; havaalanı karşılama, otel transferi, şehir içi ulaşım ve özel etkinlik taşımacılığı gibi farklı alanlarda hizmet vermektedir. Alber Turizm olarak, her müşterimize kişiye özel çözümler sunuyor, konforlu ve prestijli bir ulaşım deneyimi sağlıyoruz.</p>
-                    </div>
-
-                    <div class="service-details__content-img3">
-                        <img lazy="loading" src="assets/images/resources/Filo-kiralama4.webp" alt="">
                     </div>
                 </div>
             </div>
