--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/alberFavicon.png" />
   <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+<noscript>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+</noscript>
 
+<link rel="preload" href="assets/css/bundle.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="assets/css/bundle.all.min.css"></noscript>
 
-
-<link rel="stylesheet" href="assets/css/bundle.all.min.css">
-<link rel="stylesheet" href="assets/css/menu-toggler.css">
-
+<link rel="preload" href="assets/css/menu-toggler.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="assets/css/menu-toggler.css"></noscript>
 
 </head>
 
